# core-functions

./: .coverage  .gitignore  build_commands.txt  dreams_core.py  pyproject.toml  requirements.txt  setup.py  testfile.py
dreams_core_0_2_6_testing/: pyvenv.cfg
src/dreams_core/: BigQuery.py  Dune.py  core.py  dreams_core.py  googlecloud.py
tests/: _first_test.py  aaa_test.py
tests/core/: test_human_format.py
